refactor: reorganize the registration of the event bus consumers
